--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -19,11 +19,18 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/backend/app" >> $GITHUB_ENV
+
       - name: Install dependencies
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Create dummy .env file
+        working-directory: backend
+        run: echo "ALPHAVANTAGE_API_KEY=dummy" > .env
 
       - name: Lint with flake8
         working-directory: backend
@@ -35,12 +42,8 @@ jobs:
         working-directory: backend
         run: |
           pip install pytest
-          PYTHONPATH=./ pytest
+          pytest
 
-      - name: Create dummy .env file
-        working-directory: backend
-        run: echo "ALPHAVANTAGE_API_KEY=dummy" > .env
-      
       - name: Type check with mypy
         working-directory: backend
         run: |
@@ -52,5 +55,3 @@ jobs:
         run: |
           pip install pytest pytest-cov
           pytest --cov=app --cov-report=term-missing
-
-
